Update categoryId in index.html
Update lab slug in index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
   <link rel="stylesheet" type="text/css" href="./js/lib/jasmine/jasmine.css">
   <script type="text/javascript">
-  window.LabSlug = 'stringLength-lab';
-  window.CategoryId = 'BootCamp';
+  window.LabSlug = 'string-length-lab';
+  window.CategoryId = 'bootcamp';
   </script>
   <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/dev/labs/lib/angular/angular.js"></script>
   <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/dev/labs/lib/firebase/firebase.js"></script>
