--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
 
   <link rel="stylesheet" type="text/css" href="http://rawgit.com/andela/andela-cdn/master/labs/lib/jasmine/jasmine.css">
   <script type="text/javascript">
-  window.LabSlug = 'string-length-lab';
-  window.CategoryId = 'bootcamp';
+    window.LabSlug = 'string-length-lab';
+    window.CategoryId = 'boot-camp';
   </script>
 
-  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/lib/angular/angular.js"></script>
-  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/lib/firebase/firebase.js"></script>
+  <script type="text/javascript" src="http://rawgit.com/andela/andela-cdn/staging/labs/lib/angular/angular.js"></script>
+  <script type="text/javascript" src="http://rawgit.com/andela/andela-cdn/staging/labs/lib/firebase/firebase.js"></script>
 
 
-  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/lib/jasmine/jasmine.js"></script>
-  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/lib/jasmine/jasmine-html.js"></script>
-  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/lib/jasmine/boot.js"></script>
+  <script type="text/javascript" src="http://rawgit.com/andela/andela-cdn/staging/labs/lib/jasmine/jasmine.js"></script>
+  <script type="text/javascript" src="http://rawgit.com/andela/andela-cdn/staging/labs/lib/jasmine/jasmine-html.js"></script>
+  <script type="text/javascript" src="http://rawgit.com/andela/andela-cdn/staging/labs/lib/jasmine/boot.js"></script>
   <!-- <script src="./js/lib/jasmine/reporter.js"></script> -->
 
 
-  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/lib/underscore-min.js"></script>
+  <script type="text/javascript" src="http://rawgit.com/andela/andela-cdn/staging/labs/lib/underscore-min.js"></script>
   <script src="./js/string-length.js"></script>
   <script type="text/javascript" src="./js/string-length-tests.js"></script>
 
-  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/application.js">
+  <script type="text/javascript" src="http://rawgit.com/andela/andela-cdn/staging/labs/application.js">
 
   </script>
 </head>
