--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <title>AndeLabs, String Length.</title>
 
-  <link rel="stylesheet" type="text/css" href="./js/lib/jasmine/jasmine.css">
+  <link rel="stylesheet" type="text/css" href="http://rawgit.com/andela/andela-cdn/master/labs/lib/jasmine/jasmine.css">
   <script type="text/javascript">
   window.LabSlug = 'string-length-lab';
   window.CategoryId = 'bootcamp';
   </script>
+
   <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/lib/angular/angular.js"></script>
   <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/lib/firebase/firebase.js"></script>
 
@@ -19,10 +20,11 @@
 
 
   <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/lib/underscore-min.js"></script>
-  <script src="./js/stringLength.js"></script>
-  <script type="text/javascript" src="./js/stringLength-tests.js"></script>
+  <script src="./js/string-length.js"></script>
+  <script type="text/javascript" src="./js/string-length-tests.js"></script>
 
   <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/application.js">
+
   </script>
 </head>
 <body ng-app="AndeLabs">
