--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
   window.LabSlug = 'string-length-lab';
   window.CategoryId = 'bootcamp';
   </script>
-  <script type="text/javascript" src="./js/lib/angular/angular.js"></script>
-  <script type="text/javascript" src="./js/lib/firebase/firebase.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/lib/angular/angular.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/lib/firebase/firebase.js"></script>
 
-  <script src="./js/lib/jasmine/jasmine.js"></script>
-  <script src="./js/lib/jasmine/jasmine-html.js"></script>
-  <script src="./js/lib/jasmine/boot.js"></script>
+
+  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/lib/jasmine/jasmine.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/lib/jasmine/jasmine-html.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/lib/jasmine/boot.js"></script>
   <!-- <script src="./js/lib/jasmine/reporter.js"></script> -->
 
-  <script type="text/javascript" src="./js/lib/underscore-min.js"></script>
+
+  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/lib/underscore-min.js"></script>
   <script src="./js/stringLength.js"></script>
   <script type="text/javascript" src="./js/stringLength-tests.js"></script>
 
-  <script type="text/javascript" src="./js/application.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/staging/labs/application.js">
+  </script>
 </head>
 <body ng-app="AndeLabs">
 <div ng-controller="LabCtrl">
