Resolved conflicting changes, test js file rename stands

--- a/index.html
+++ b/index.html
@@ -2,28 +2,26 @@
 <html lang="en">
 <head>
   <title>AndeLabs, String Length.</title>
-
-  <link rel="stylesheet" type="text/css" href="./js/lib/jasmine/jasmine.css">
+  <link rel="stylesheet" type="text/css" href="http://rawgit.com/andela/andela-cdn/master/labs/lib/jasmine/jasmine.css">
   <script type="text/javascript">
-  window.LabSlug = 'string-length-lab';
-  window.CategoryId = 'bootcamp';
+    window.LabSlug = 'string-length-lab';
+    window.CategoryId = 'boot-camp';
   </script>
-  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/master/labs/lib/angular/angular.js"></script>
-  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/master/labs/lib/firebase/firebase.js"></script>
+  <script type="text/javascript" src="http://rawgit.com/andela/andela-cdn/master/labs/lib/angular/angular.js"></script>
+  <script type="text/javascript" src="http://rawgit.com/andela/andela-cdn/master/labs/lib/firebase/firebase.js"></script>
 
 
-  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/master/labs/lib/jasmine/jasmine.js"></script>
-  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/master/labs/lib/jasmine/jasmine-html.js"></script>
-  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/master/labs/lib/jasmine/boot.js"></script>
-  <!-- <script src="./js/lib/jasmine/reporter.js"></script> -->
+  <script type="text/javascript" src="http://rawgit.com/andela/andela-cdn/master/labs/lib/jasmine/jasmine.js"></script>
+  <script type="text/javascript" src="http://rawgit.com/andela/andela-cdn/master/labs/lib/jasmine/jasmine-html.js"></script>
+  <script type="text/javascript" src="http://rawgit.com/andela/andela-cdn/master/labs/lib/jasmine/boot.js"></script>
 
+  <script type="text/javascript" src="http://rawgit.com/andela/andela-cdn/master/labs/lib/underscore-min.js"></script>
 
-  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/master/labs/lib/underscore-min.js"></script>
-  <script src="./js/stringLength.js"></script>
-  <script type="text/javascript" src="./js/stringLength-tests.js"></script>
+  <script src="./js/string-length.js"></script>
+  <script type="text/javascript" src="./js/string-length-tests.js"></script>
 
-  <script type="text/javascript" src="https://rawgit.com/andela/andela-cdn/master/labs/application.js">
-  </script>
+  <script type="text/javascript" src="http://rawgit.com/andela/andela-cdn/master/labs/application.js"></script>
+
 </head>
 <body ng-app="AndeLabs">
 <div ng-controller="LabCtrl">
